--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,13 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: #303030;
+  background: linear-gradient(
+    180deg,
+    rgba(48, 48, 48, 1) 0%,
+    rgba(34, 34, 34, 1) 50%
+  );
+  background-attachment: fixed;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
